mudança endereco imagens

--- a/pages/lps/1000caminhos.html
+++ b/pages/lps/1000caminhos.html
@@ -14,7 +14,7 @@
     <title>1000 Caminhos 🎸</title>
     <meta property="og:title" content="1000 Caminhos 🎸" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/1000caminhos" />
-    <meta property="og:image" content="../../images/músicas/1000 caminhos.jpg" />
+    <meta property="og:image" content="../../images/musicas/1000 caminhos.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH">
-                <img src="../../images/músicas/1000 caminhos.jpg" alt="" />
+                <img src="../../images/musicas/1000 caminhos.jpg" alt="" />
                 </a>
             </div>
 
