--- a/pages/lps/ghosting.html
+++ b/pages/lps/ghosting.html
@@ -14,7 +14,7 @@
     <title>Ghosting com o mundo 👻</title>
     <meta property="og:title" content="Ghosting com o mundo 👻" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/ghosting" />
-    <meta property="og:image" content="../../images/músicas/ghosting.jpg" />
+    <meta property="og:image" content="../../images/musicas/ghosting.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/6t8wNssH4bNZVcw5HlyVo6">
-                <img src="../../images/músicas/ghosting.jpg" alt="" />
+                <img src="../../images/musicas/ghosting.jpg" alt="" />
                 </a>
             </div>
 
