--- a/pages/lps/macacosurbanos.html
+++ b/pages/lps/macacosurbanos.html
@@ -14,7 +14,7 @@
     <title>macacos urbanos</title>
     <meta property="og:title" content="macacos urbanos" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/macacosurbanos" />
-    <meta property="og:image" content="../../images/músicas/millennial.jpg" />
+    <meta property="og:image" content="../../images/musicas/millennial.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/1QakFtnk72N1DOEcU0OV1q">
-                <img src="../../images/músicas/macacosurbanos.jpg" alt="" />
+                <img src="../../images/musicas/macacosurbanos.jpg" alt="" />
                 </a>
             </div>
 
