--- a/pages/lps/meioblackmirror.html
+++ b/pages/lps/meioblackmirror.html
@@ -14,7 +14,7 @@
     <title>meio black mirror 📱</title>
     <meta property="og:title" content="meio black mirror 📱" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/meioblackmirror" />
-    <meta property="og:image" content="../../images/músicas/meioblackmirror.jpg" />
+    <meta property="og:image" content="../../images/musicas/meioblackmirror.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/0PPD0gayhsn7SYOONsasXW">
-                <img src="../../images/músicas/meioblackmirror.jpg" alt="" />
+                <img src="../../images/musicas/meioblackmirror.jpg" alt="" />
                 </a>
             </div>
 
