--- a/pages/lps/millennial.html
+++ b/pages/lps/millennial.html
@@ -14,7 +14,7 @@
     <title>Millennial</title>
     <meta property="og:title" content="Millennial" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/millennial" />
-    <meta property="og:image" content="../../images/músicas/millennial.jpg" />
+    <meta property="og:image" content="../../images/musicas/millennial.jpg" />
     <meta property="og:description" content="(ou só mais um disco de rap feito por um menino branco)" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -71,7 +71,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl">
-                <img src="../../images/músicas/millennial.jpg" alt="" />
+                <img src="../../images/musicas/millennial.jpg" alt="" />
                 </a>
             </div>
 
