--- a/pages/lps/nosquereminfelizes.html
+++ b/pages/lps/nosquereminfelizes.html
@@ -14,7 +14,7 @@
     <title>nos querem infelizes :(</title>
     <meta property="og:title" content="nos querem infelizes :(" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/nosquereminfelizes" />
-    <meta property="og:image" content="../../images/músicas/nos querem infelizes.jpg" />
+    <meta property="og:image" content="../../images/musicas/nos querem infelizes.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/3z6ucuggkQxdffEZPRMiID">
-                <img src="../../images/músicas/nos querem infelizes.jpg" alt="" />
+                <img src="../../images/musicas/nos querem infelizes.jpg" alt="" />
                 </a>
             </div>
 
