--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -14,7 +14,7 @@
     <title>sdds orkut 💜</title>
     <meta property="og:title" content="sdds orkut 💜" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sddsorkut" />
-    <meta property="og:image" content="../../images/músicas/sdds orkut.jpg" />
+    <meta property="og:image" content="../../images/musicas/sdds orkut.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -88,7 +88,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/1wvKiucBlfbGwKNgwox6kG">
-                <img src="../../images/músicas/sdds orkut.jpg" alt="" />
+                <img src="../../images/musicas/sdds orkut.jpg" alt="" />
                 </a>
             </div>
 
