--- a/pages/lps/sentido.html
+++ b/pages/lps/sentido.html
@@ -14,7 +14,7 @@
     <title>$entid0 👁️</title>
     <meta property="og:title" content="$entid0 👁️" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sentido" />
-    <meta property="og:image" content="../../images/músicas/sentido.jpg" />
+    <meta property="og:image" content="../../images/musicas/sentido.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/06IUbzyxdblX6gy9FNmT3c">
-                <img src="../../images/músicas/sentido.jpg" alt="" />
+                <img src="../../images/musicas/sentido.jpg" alt="" />
                 </a>
             </div>
 
