--- a/pages/lps/sonholucido.html
+++ b/pages/lps/sonholucido.html
@@ -14,7 +14,7 @@
     <title>Sonho Lúcido</title>
     <meta property="og:title" content="Sonho Lúcido" />
     <meta property="og:url" content="https://pedroluz.com.br/pages/lps/sonholucido" />
-    <meta property="og:image" content="../../images/músicas/sonho lúcido.jpg" />
+    <meta property="og:image" content="../../images/musicas/sonho lúcido.jpg" />
     <meta property="og:description" content="músicas 🧙🏻‍♂️" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -70,7 +70,7 @@
             
             <div class="image">
                 <a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e">
-                <img src="../../images/músicas/sonho lúcido.jpg" alt="" />
+                <img src="../../images/musicas/sonho lúcido.jpg" alt="" />
                 </a>
             </div>
 
