--- a/pages/musica.html
+++ b/pages/musica.html
@@ -73,7 +73,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-		<img src="../images/músicas/sdds orkut.jpg" alt="" />
+		<img src="../images/musicas/sdds orkut.jpg" alt="" />
 		</a>
 	</div>
 </section>
@@ -93,7 +93,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-		<img src="../images/músicas/sonho lúcido.jpg" alt="" />
+		<img src="../images/musicas/sonho lúcido.jpg" alt="" />
 		</a>
 	</div>
 </section>
@@ -111,7 +111,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH" target="_blank">
-		<img src="../images/músicas/1000 caminhos.jpg" alt="" />
+		<img src="../images/musicas/1000 caminhos.jpg" alt="" />
 		</a>
 	</div>
 </section>
@@ -130,7 +130,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/6t8wNssH4bNZVcw5HlyVo6?si=42c60cacd2464db7" target="_blank">
-		<img src="../images/músicas/ghosting.jpg" alt="" />
+		<img src="../images/musicas/ghosting.jpg" alt="" />
 	</a>
 	</div>
 </section>
@@ -149,7 +149,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/3z6ucuggkQxdffEZPRMiID?si=57514d682119453a" target="_blank">
-		<img src="../images/músicas/nos querem infelizes.jpg" alt="" /></a>
+		<img src="../images/musicas/nos querem infelizes.jpg" alt="" /></a>
 	</div>
 </section>
 <!-- Sonho lúcido -->
@@ -167,7 +167,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl" target="_blank">
-		<img src="../images/músicas/millennial.jpg" alt="" />
+		<img src="../images/musicas/millennial.jpg" alt="" />
 	</div>
 </section>
 
