--- a/pages/projetos/sta_marta.html
+++ b/pages/projetos/sta_marta.html
@@ -54,9 +54,10 @@
         </div>
     </div>
     <a href="../acompanhe">me acompanhe</a>
-    <a href="../../javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
-    </a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
+    menu
+    <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
+</a>
 </div>
 <a href="../blog">
     <img src="arrow.svg" alt="" />
