--- a/pages/lps/ghosting.html
+++ b/pages/lps/ghosting.html
@@ -47,9 +47,10 @@
     </div>
     <a href="../projetos">projetos</a>
     <a href="../acompanhe">me acompanhe</a>
-    <a href="../../javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
-    </a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
+    menu
+    <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
+</a>
 </div>
 
 <div id="wrapper" class="divided">
