--- a/pages/wisemutts.html
+++ b/pages/wisemutts.html
@@ -11,14 +11,14 @@
 
     gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>mutts on the moon 🌙</title>
-	<meta property="og:title" content="mutts on the moon" />
+    <title>wise mutts</title>
+	<meta property="og:title" content="wise mutts" />
 	<meta property="og:url" content="https://pedroluz.com.br/pages/mutts" />
 	<meta property="og:image" content="../images/og.jpg" />
-	<meta property="og:description" content="mutts on the moon 🌙" />
+	<meta property="og:description" content="wise mutts 🐕" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../assets/favicons/wisemutts.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css"/>
     <link rel="stylesheet" href="../assets/css/mapa.css"/>
@@ -30,10 +30,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav hover"
-     style="background-color: rgb(42, 0, 86);border-bottom: 1px double #5500b5;">
-    <a href="../index" class="logo" style="width:100%"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;" alt="" /></a>
+     style="background-color: rgb(255, 255, 255);border-bottom: 1px double #8e5eff;">
+    <a href="../index" class="logo" style="width:100%"><img src="../assets/favicons/wisemutts.ico" class="logo_img" style="width:20px;float:center;" alt="" /></a>
     <a href="../index" class="icon" style="text-align:center;">
-        <img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"alt="" /></a>
+        <img src="../assets/favicons/wisemutts.ico" class="logo_img" style="width:20px;float:center;"alt="" /></a>
     </a>
 </div>
 <!-- Gallery -->
@@ -43,18 +43,16 @@
 		<!-- One -->
 			<section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 				<div class="content">
-					<h2>mutts on the moon 🌙</h2>
-                    <p>Listen now 🐕</p>
-					<p>Follow our socials:</br>
-					
+					<h2><img src="../assets/favicons/wisemutts.ico" alt="wise mutts icon" style="width: 1em; height: 1em; vertical-align: top;"> wise mutts </h2>
+                    <p>Listen now 🐕 </p>
 					<a href="" target="_blank">
 						<img src="../images/spotify.png" width=90px alt="" style="margin-top: 20px" />
 					</a>
-					<a href="https://www.youtube.com/@muttsonthemoon" target="_blank">
+					<a href="https://www.youtube.com/channel/UCKbt8C2YnnWl6JcpSw1q04Q" target="_blank">
 						<img src="../images/youtube.jpg" width=90px alt="" style="margin-top: 20px" /></a><br>
-					<a href="https://www.instagram.com/muttsonthemoon/" target="_blank">
+					<a href="https://www.instagram.com/wisemutts/" target="_blank">
 						<img src="../images/instagram.png" width=90px alt="" style="margin-top: 20px"/></a>
-					<a href="https://www.tiktok.com/@muttsonthemoon" target="_blank">
+					<a href="https://www.tiktok.com/@wisemutts" target="_blank">
 						<img src="../images/tiktok.jpg" width=90px alt="" style="margin-top: 20px"/></a></p>
 				</div>
 				
