--- a/pages/wisemutts.html
+++ b/pages/wisemutts.html
@@ -29,15 +29,6 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="topnav hover"
-     style="background-color: rgb(255, 255, 255);border-bottom: 1px double #8e5eff;">
-    <a href="../index" class="logo" style="width:100%"><img src="../assets/favicons/wisemutts.ico" class="logo_img" style="width:20px;float:center;" alt="" /></a>
-    <a href="../index" class="icon" style="text-align:center;">
-        <img src="../assets/favicons/wisemutts.ico" class="logo_img" style="width:20px;float:center;"alt="" /></a>
-    </a>
-</div>
-<!-- Gallery -->
-
 <body class="is-preload">
 	<div id="wrapper" class="divided">
 		<!-- One -->
@@ -45,6 +36,7 @@
 				<div class="content">
 					<h2><img src="../assets/favicons/wisemutts.ico" alt="wise mutts icon" style="width: 1em; height: 1em; vertical-align: top;"> wise mutts </h2>
                     <p>Listen now 🐕 </p>
+					<iframe data-testid="embed-iframe" style="background:#fff; border-radius:12px;" src="https://open.spotify.com/embed/artist/4cr5NgemNVENAYh4oLGAI8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 					<a href="" target="_blank">
 						<img src="../images/spotify.png" width=90px alt="" style="margin-top: 20px" />
 					</a>
