--- a/pages/wisemutts.html
+++ b/pages/wisemutts.html
@@ -34,9 +34,10 @@
 		<!-- One -->
 			<section class="banner style1 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 				<div class="content">
-					<h2><img src="../assets/favicons/wisemutts.ico" alt="wise mutts icon" style="width: 1em; height: 1em; vertical-align: top;"> wise mutts </h2>
-                    <p>Listen now 🐕 </p>
+					<h1><img src="../assets/favicons/wisemutts.ico" alt="wise mutts icon" style="width: 1em; height: 1em; vertical-align: top;"> wise mutts </h1>
+                    <h3>Listen now </h3>
 					<iframe data-testid="embed-iframe" style="background:#fff; border-radius:12px;" src="https://open.spotify.com/embed/artist/4cr5NgemNVENAYh4oLGAI8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+					<h2><br>Follow our socials 🐕</h2>
 					<a href="" target="_blank">
 						<img src="../images/spotify.png" width=90px alt="" style="margin-top: 20px" />
 					</a>
