--- a/musica.html
+++ b/musica.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="topbar">
-        <h2><img src="assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</h2>
+        <h2><a href="index.html" style="text-decoration: none; color: inherit;"><img src="assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</a></h2>
         <div id="menu-toggle" class="burger">
             <span></span>
             <span></span>
@@ -26,7 +26,7 @@
                 <a href="#" class="section-toggle">arte</a>
                 <ul class="subsection">
                     <li><a href="musica.html">música</a></li>
-                    <li><a href="#">poesia</a></li>
+                    <li><a href="poesias.html">poesia</a></li>
                 </ul>
             </li>
             <li>
