Finding the path home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="topbar">
-        <h2><a href="index.html" style="text-decoration: none; color: inherit;"><img src="assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</a></h2>
+        <h2><img src="assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</h2>
         <div id="menu-toggle" class="burger">
             <span></span>
             <span></span>
@@ -19,17 +19,16 @@
     </header>
     <nav class="menu" id="top-menu">
         <ul>
+            <li><a href="index.html">página inicial</a></li>
             <li>
                 <a href="#" class="section-toggle">arte</a>
                 <ul class="subsection">
-                    <li><a href="musica.html">música</a></li>
-                    <li><a href="poesias.html">poesia</a></li>
+                    <li><a href="pages/arte/musica.html">música</a></li>
+                    <li><a href="pages/arte/poesias.html">poesia</a></li>
+                    <li><a href="pages/arte/projetos/projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li>
-                <a href="#" class="section-toggle">código</a>
-                </ul>
-            </li>
+            <li><a href="#">código</a></li>
         </ul>
     </nav>
     <main class="content">
