--- a/pages/arte/poesias.html
+++ b/pages/arte/poesias.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poesias - pedroluz</title>
-    <link rel="icon" href="assets/icons/pedroluz.ico" sizes="any">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/icons/pedroluz.ico">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/poesias.css">
-    <script defer src="js/poesias.js"></script>
-    <script defer src="js/script.js"></script>
+    <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
+    <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
+    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="../../css/poesias.css">
+    <script defer src="../../js/poesias.js"></script>
+    <script defer src="../../js/script.js"></script>
 </head>
 <body>
     <header class="topbar">
-        <h2><a href="index.html" style="text-decoration: none; color: inherit;"><img src="assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</a></h2>
+        <h2><img src="../../assets/icons/pedroluz.ico" alt="" class="brand-icon">pedroluz</h2>
         <div id="menu-toggle" class="burger">
             <span></span>
             <span></span>
@@ -22,17 +22,16 @@
     </header>
     <nav class="menu" id="top-menu">
         <ul>
+            <li><a href="../../index.html">página inicial</a></li>
             <li>
                 <a href="#" class="section-toggle">arte</a>
                 <ul class="subsection">
                     <li><a href="musica.html">música</a></li>
                     <li><a href="poesias.html">poesia</a></li>
+                    <li><a href="projetos/projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li>
-                <a href="#" class="section-toggle">código</a>
-                </ul>
-            </li>
+            <li><a href="#">código</a></li>
         </ul>
     </nav>
     <main class="content">
