--- a/pages/arte/projetos/projetos.html
+++ b/pages/arte/projetos/projetos.html
@@ -39,26 +39,14 @@
             <hr class="content-divider">
         </div>
         
-        <a href="projeto1.html" class="project-link">
+        <a href="criatura.html" class="project-link">
             <div class="project-block">
                 <div class="project-image">
-                    <img src="assets/images/projects/project1.jpg" alt="Análise de Dados Ambientais">
+                    <img src="../../../assets/images/projetos/criatura/criatura.png" alt="Criatura">
                 </div>
                 <div class="project-info">
-                    <h3>Análise de Dados Ambientais</h3>
-                    <p>Projeto de análise e visualização de dados ambientais da Amazônia</p>
-                </div>
-            </div>
-        </a>
-
-        <a href="projeto2.html" class="project-link">
-            <div class="project-block">
-                <div class="project-image">
-                    <img src="assets/images/projects/project2.jpg" alt="Sistema de Reconhecimento de Padrões">
-                </div>
-                <div class="project-info">
-                    <h3>Sistema de Reconhecimento de Padrões</h3>
-                    <p>Desenvolvimento de algoritmos para reconhecimento de padrões em imagens</p>
+                    <h3>Uma criaturinha interessante</h3>
+                    <p>Um encontro inusitado na beira do rio</p>
                 </div>
             </div>
         </a>
