--- a/pages/arte/poesias.html
+++ b/pages/arte/poesias.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="../../css/poesias.css">
+    <link rel="stylesheet" href="../../css/image-popup.css">
     <script defer src="../../js/poesias.js"></script>
+    <script defer src="../../js/image-popup.js"></script>
     <script defer src="../../js/script.js"></script>
 </head>
 <body>
@@ -40,14 +42,8 @@
             <hr class="content-divider">
         </div>
     </main>
-    <div id="poesias-grid">
+    <div id="poesias-grid" class="image-thumbs">
         <!-- Poems will be loaded dynamically via JavaScript -->
-    </div>
-
-    <!-- Popup for full-size image -->
-    <div id="image-popup" class="popup">
-        <span class="close-popup">&times;</span>
-        <img id="popup-image" src="" alt="Poesia em tamanho completo">
     </div>
 </body>
 </html>
