--- a/pages/arte/projetos/criatura.html
+++ b/pages/arte/projetos/criatura.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criatura - pedroluz</title>
+    <title>Uma criaturinha interessante - pedroluz</title>
     <link rel="icon" href="../../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../../css/styles.css">
     <link rel="stylesheet" href="../../../css/projetos.css">
+    <link rel="stylesheet" href="../../../css/image-popup.css">
     <script defer src="../../../js/script.js"></script>
+    <script defer src="../../../js/image-popup.js"></script>
 </head>
 <body>
     <header class="topbar">
@@ -36,13 +38,9 @@
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2 style="color: #6b629d;">Criatura</h2>
-            <hr class="content-divider">
+            <h2 style="color: #6b629d;">Uma criaturinha interessante</h2>
         </div>
         <div class="project-detail">
-            <div class="projeto-capa" style="text-align:center;">
-                <img src="../../../assets/images/projetos/criatura/criatura.png" alt="Capa do projeto Criatura" style="max-width:350px;width:100%;height:auto;">
-            </div>
             <h2>Um encontro na beira do rio</h2>
             <p>Era um sábado de manhã e eu tava como de costume indo pra um cantinho sossegado pra descansar e não fazer nada, dessa vez uma clareirinha na beira do rio. Eu escuto de longe algo como um resmungo. Parecia alguém ranzinza e irritado falando na velocidade 2x numa língua que eu não conseguia entender, de vez em quando parando como que pra suspirar, fazendo um chiado que parecia o som de um celular antigo vibrando numa mesa.</p>
             <p>Identifiquei que o som tava vindo do meio do rio. Vinha de uma pequena pequena criatura, do tamanho de uma banana nanica. Flutuando no rio em cima de um pedaço de madeira, como se fosse uma canoa. Dando a direção com um galho, como se fosse um remo. À distância, a forma lembrava a de um velho, com barba e cabelos brancos e compridos. Observei um pouco, tentando entender. Quando eu vi que ele seguia o fluxo do rio e que eu ia perder a chance de entender que porra era aquela: chamei, assobiei e acenei. Se ele não parasse eu ia nadando, mas tava com medo de assustar e afugentar o bichinho.</p>
@@ -70,9 +68,9 @@
             <p>De repente sentiu um pulso eletromagnético saindo do telefone, batendo forte no seu corpo e sendo registrado pelo aparelho. Caiu pra trás num susto. Os vídeos ainda tocando no aparelho iluminavam o interior do sofá. Os pensamentos ainda indistinguíveis uns dos outros se tornaram todos aterrorizados. Percebeu que com o registro daquele pulso pelo aparelho seria possível identificar sua forma, e perceber que não era um humano utilizando aquele aparelho. Com a respiração curta e ofegante, como se o coraçãozinho fosse parar, saiu correndo buraco afora, com medo de ser descoberto e perseguido pelos humanos. Temendo estragar séculos, milênios de atuação discreta da sua espécie e de tantas outras que só aparecem para os humanos quando querem. Correu por dias e noites e dias e noites e dias e noites sem parar, até que gradualmente a sua respiração foi acalmando um pouco e os pensamentos ainda acelerados começaram a ser discerníveis uns dos outros. Chegou à margem de um rio, pegou um pedaço de madeira e um galho. Subiu em cima do pedaço de madeira, como se fosse uma canoa. Dando a direção com o galho, como se fosse um remo.</p>
             <p>Foi aí que ele me viu de longe sentado com as cachorras na beira do rio e decidiu não se esconder. Seria bom conversar com um humano agora sobre tudo aquilo. Então seguiu remando e resmungando e despejando no ar os pensamentos que doíam na sua cabeça, esperando que eu notasse e chamasse. Eu notei e chamei e assim que chegamos aqui. Ele me disse que flutuando pelo rio ficou refletindo sobre a jornada desse ciclo, que sem dúvida alguma foi a mais emocionante e aterrorizante de toda a sua vida. Ficou tentando entender o porquê dos humanos estarem ingerindo informação nessa velocidade colossal. E não só alguns humanos com algum objetivo ou algo assim. Todos estavam nesse ritmo. Será que estavam tentando desvendar algum segredo do universo através de força bruta? E por um instante ficou admirado com a capacidade humana de conseguir fazer isso sem enlouquecer, como aconteceu com ele. Dessa vez fui eu que não entendi se ele tava sendo sarcástico. Seguimos conversando por mais ou menos umas duas hora sobre isso tudo. Ele me agradeceu, acho que eu ajudei ele a entender alguma coisa, eu espero. Ele definitivamente ajudou a me confundir. Eu  também agradeci. Ele seguiu seu rumo flutuando no tronco em direção ao seu encontro jupiterino. Eu peguei meu telefone, apaguei minhas contas e aplicativos do instagram, tiktok e facebook. Tô fazendo um site agora.</p>
             <h2>Fotos</h2>
-            <div class="projeto-fotos" style="display:flex;flex-wrap:wrap;gap:20px;justify-content:center;">
-                <img src="../../../assets/images/projetos/criatura/01.jpg" alt="Foto 01 criatura" style="max-width:350px;width:100%;height:auto;">
-                <img src="../../../assets/images/projetos/criatura/criatura.png" alt="Criatura" style="max-width:350px;width:100%;height:auto;">
+            <div class="image-thumbs">
+                <img src="../../../assets/images/projetos/criatura/01.jpg" alt="Foto 01 criatura" class="image-thumb">
+                <img src="../../../assets/images/projetos/criatura/criatura.png" alt="Criatura" class="image-thumb">
             </div>
         </div>
     </main>
