--- a/pages/arte/projetos/projetos.html
+++ b/pages/arte/projetos/projetos.html
@@ -50,6 +50,18 @@
                 </div>
             </div>
         </a>
+
+        <a href="sta_marta.html" class="project-link">
+            <div class="project-block">
+                <div class="project-image">
+                    <img src="../../../assets/images/projetos/sta_marta/01.jpg" alt="Farol de Santa Marta">
+                </div>
+                <div class="project-info">
+                    <h3>Farol de Santa Marta</h3>
+                    <p>O velho, a Kombi e a decisão de pegar a estrada. Uma jornada de autoconhecimento, surf e olhos misteriosos nas dunas.</p>
+                </div>
+            </div>
+        </a>
     </main>
 </body>
 </html>
