--- a/pages/arte/musica.html
+++ b/pages/arte/musica.html
@@ -36,7 +36,7 @@
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2 style="color: #6b629d;">Música</h2>
+            <h2>Música</h2>
             <hr class="content-divider">
             <p>Escuta agora e siga nas plataformas 🌷</p>
             <p>
@@ -49,19 +49,19 @@
             </p>
             </div>
 
-        <div class="content-block">
+        <div class="content-block" style="padding: 20px;">
                 <a href="https://open.spotify.com/artist/2rj8ccj3Z0rfVh18nxzZUQ" target="_blank" rel="noopener noreferrer">
                     <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2023/05/Spotify_Full_Logo_RGB_Green.png" alt="Spotify logo" style="height: 32px; margin-right: 20px;">
                 </a>
             <iframe style="border-radius:12px; width: 100%; height: 152px; margin: 10px 0;" src="https://open.spotify.com/embed/artist/2rj8ccj3Z0rfVh18nxzZUQ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <div class="content-block">
+        <div class="content-block" style="padding: 20px;">
                 <a href="https://www.youtube.com/@pedroluzer" target="_blank" rel="noopener noreferrer">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/YouTube_Logo_2017.svg/512px-YouTube_Logo_2017.svg.png" alt="YouTube logo" style="height: 32px;">
                 </a>
             <iframe style="border-radius:12px; width: 100%; height: 225px; margin: 10px 0;" src="https://www.youtube.com/embed/Z7onMZBUI7A?si=4lOyKAd3H8M144kd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <div class="content-block">
+        <div class="content-block" style="padding: 20px;">
             <h3 style="color: #6b629d; margin-bottom: 20px;">Outras plataformas</h3>
 
             <hr class="content-divider">
