--- a/pages/arte/poesias.html
+++ b/pages/arte/poesias.html
@@ -38,8 +38,7 @@
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2 style="color: #6b629d;">Poesia</h2>
-            <hr class="content-divider">
+            <h2>Poesia</h2>
         </div>
     </main>
     <div id="poesias-grid" class="image-thumbs">
