--- a/pages/arte/projetos/criatura.html
+++ b/pages/arte/projetos/criatura.html
@@ -38,7 +38,7 @@
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2 style="color: #6b629d;">Uma criaturinha interessante</h2>
+            <h2;">Uma criaturinha interessante</h2>
         </div>
         <div class="project-detail">
             <h2>Um encontro na beira do rio</h2>
