--- a/pages/arte/projetos/projetos.html
+++ b/pages/arte/projetos/projetos.html
@@ -35,7 +35,7 @@
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2 style="color: #6b629d;">Outros Projetos</h2>
+            <h2;">Outros Projetos</h2>
             <hr class="content-divider">
         </div>
         
