--- a/pages/arte/projetos/sta_marta.html
+++ b/pages/arte/projetos/sta_marta.html
@@ -38,7 +38,7 @@
     <main class="content">
         <div class="content-block title-block">
 
-            <h2 style="color: #6b629d;">Farol de Santa Marta</h2>
+            <h2;">Farol de Santa Marta</h2>
             <p style="color: #898989; font-style: italic;">o velho, a Kombi e a decisão de pegar a estrada</p>
         </div>
         <div class="project-detail">
