wise mutts added

--- a/pages/arte/projetos/projetos.html
+++ b/pages/arte/projetos/projetos.html
@@ -39,6 +39,18 @@
             <hr class="content-divider">
         </div>
         
+        <a href="wisemutts.html" class="project-link">
+            <div class="project-block">
+                <div class="project-image">
+                    <img src="../../../assets/images/projetos/mutts.jpg" alt="Wise Mutts">
+                </div>
+                <div class="project-info">
+                    <h3>wise mutts <img src="../../../assets/icons/wisemutts.ico" alt="wise mutts icon" style="width: 1.2em; height: 1.2em; vertical-align: middle; margin-right: 8px;"></h3>
+                    <p>Músicas e conteúdos Lo-Fi automatizados com IA</p>
+                </div>
+            </div>
+        </a>
+
         <a href="criatura.html" class="project-link">
             <div class="project-block">
                 <div class="project-image">
@@ -54,7 +66,7 @@
         <a href="sta_marta.html" class="project-link">
             <div class="project-block">
                 <div class="project-image">
-                    <img src="../../../assets/images/projetos/sta_marta/01.jpg" alt="Farol de Santa Marta">
+                    <img src="../../../assets/images/projetos/sta_marta/03.jpg" alt="Farol de Santa Marta">
                 </div>
                 <div class="project-info">
                     <h3>Farol de Santa Marta</h3>
